headers = [
    'inc/lin/type/common/bnf.hpp',
    'inc/lin/type/common/signal_encoding_type.hpp',

    'inc/lin/type/ncf/global.hpp',
    'inc/lin/type/ncf/node.hpp',
    'inc/lin/type/ncf/general.hpp',
    'inc/lin/type/ncf/diagnostic.hpp',
    'inc/lin/type/ncf/frame.hpp',
    'inc/lin/type/ncf/frame_properties.hpp',
    'inc/lin/type/ncf/signal.hpp',
    'inc/lin/type/ncf/signal_encoding_type.hpp',
    'inc/lin/type/ncf/status.hpp',
    'inc/lin/type/ncf/free_text.hpp',
    'inc/lin/type/ncf/node_capability_file.hpp',

    'inc/lin/type/ldf/global.hpp',
    'inc/lin/type/ldf/node.hpp',
    'inc/lin/type/ldf/signal.hpp',
    'inc/lin/type/ldf/frame.hpp',
    'inc/lin/type/ldf/schedule_table.hpp',
    'inc/lin/type/ldf/lin_description_file.hpp',
]

lin_type_dep = declare_dependency(
    extra_files : [
        headers,
    ],
    include_directories : include_directories('inc'),
)
